WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174383
RealtimeOutgoingAudioSource should not push more audio data if the WebRTC thread is not able to process it
https://bugs.webkit.org/show_bug.cgi?id=174383
Summary
RealtimeOutgoingAudioSource should not push more audio data if the WebRTC thr...
youenn fablet
Reported
2017-07-11 13:33:19 PDT
On slow devices, the audio capture thread, which is high priority, may push more audio data than what the WebRTC thread can process. In that case, messages are queued in the WebRTC thread queue and it may end up blocking the main thread or increase memory too much. We should stop pushing data when the buffered amount is large.
Attachments
Patch
(4.97 KB, patch)
2017-07-11 13:50 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-07-11 13:50:34 PDT
Created
attachment 315160
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2017-07-11 13:51:20 PDT
<
rdar://problem/33245519
>
WebKit Commit Bot
Comment 3
2017-07-11 17:25:42 PDT
Comment on
attachment 315160
[details]
Patch Clearing flags on attachment: 315160 Committed
r219377
: <
http://trac.webkit.org/changeset/219377
>
WebKit Commit Bot
Comment 4
2017-07-11 17:25:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug